basic campaign detail

--- a/app/pages/campaigns-list/campaigns-list.html
+++ b/app/pages/campaigns-list/campaigns-list.html
@@ -9,7 +9,7 @@
 
 <ion-content>
 
-  <ion-card *ngFor="#campaign of campaigns">
+  <ion-card *ngFor="#campaign of campaigns" (click)="showCampaign(campaign.niceURL)">
 
     <img src='{{ campaign.images.author }}'>
 
