campaign detail - button with redirect

--- a/app/pages/campaign-detail/campaign-detail.html
+++ b/app/pages/campaign-detail/campaign-detail.html
@@ -12,27 +12,27 @@
       <ion-card-title>
         {{ product.name }}
       </ion-card-title>
-      <ion-card-title>
-        {{ product.stockInfoText }}
-      </ion-card-title>
-      <ion-card-title>
-        {{ product.stockWarningText }}
-      </ion-card-title>
     </ion-card-content>
 
-    <ion-item>
-      <button primary clear item-left>
-        <ion-icon name="thumbs-up"></ion-icon>
-        <div>12 Likes</div>
-      </button>
-      <button primary clear item-left>
-        <ion-icon name="text"></ion-icon>
-        <div>4 Comments</div>
-      </button>
-      <ion-note item-right>
-        11h ago
-      </ion-note>
-    </ion-item>
+    <ion-row>
+      <ion-col width-70>
+        <p>
+          {{ product.stockInfoText }}
+        </p>
+        <p *ngIf="product.stockWarningText != ''">
+          {{ product.stockWarningText }}
+        </p>
+      </ion-col>
+      <ion-col width-30>
+        <a href="{{product.url}}">
+          <button secondary>
+            {{ product.price }}
+            <ion-icon name="cart"></ion-icon>
+          </button>
+        </a>
+      </ion-col>
+    </ion-row>
+
 
   </ion-card>
 
