--- a/app/pages/campaigns-list/campaigns-list.html
+++ b/app/pages/campaigns-list/campaigns-list.html
@@ -9,7 +9,7 @@
 
 <ion-content>
 
-  <ion-card *ngFor="#campaign of campaigns" (click)="showCampaign(campaign.niceURL)">
+  <ion-card *ngFor="#campaign of campaigns" (click)="showCampaign(campaign)">
 
     <img src='{{ campaign.images["homepage-main"] }}'>
 
