--- a/app/pages/campaign-detail/campaign-detail.html
+++ b/app/pages/campaign-detail/campaign-detail.html
@@ -26,12 +26,10 @@
         </p>
       </ion-col>
       <ion-col width-30>
-        <a href="{{product.url}}">
-          <button secondary>
-            {{ product.price }}
-            <ion-icon name="cart"></ion-icon>
-          </button>
-        </a>
+        <button secondary (click)="redirect(product.url)">
+          {{ product.price }}
+          <ion-icon name="cart"></ion-icon>
+        </button>
       </ion-col>
     </ion-row>
 
