--- a/app/pages/product-detail/product-detail.html
+++ b/app/pages/product-detail/product-detail.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the ProductDetailPage page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-navbar *navbar>
   <ion-title>{{ product.name }}</ion-title>
 </ion-navbar>
@@ -12,10 +6,10 @@
 
   <img src="{{ product.images[0]['productDetail-thumbnail-full'] }}" (click)="showImageDetail(0)">
 
-  <scroll-content>
+  <scroll-content class="imageSlider">
     <ion-scroll scrollX="true"  class="item">
         <ion-row>
-            <ion-col width-33 *ngFor="#image of product.images; #i = index">
+            <ion-col width-33 *ngFor="#image of product.images; #i = index" class="img-{{i}}">
                 <img src="{{ image['productDetail-thumbnail'] }}" (click)="showImageDetail(i)">
             </ion-col>
         </ion-row>
