campaign detail card padding

--- a/app/pages/campaign-detail/campaign-detail.html
+++ b/app/pages/campaign-detail/campaign-detail.html
@@ -2,7 +2,7 @@
   <ion-title>{{ campaign.name }}</ion-title>
 </ion-navbar>
 
-<ion-content padding class="campaign-detail">
+<ion-content class="campaign-detail">
 
   <ion-card *ngFor="#product of products">
 
