--- a/app/pages/campaigns-list/campaigns-list.html
+++ b/app/pages/campaigns-list/campaigns-list.html
@@ -7,7 +7,9 @@
 </ion-navbar>
 
 
-<ion-content>
+<ion-content class="campaigns-list" alt="" width="32" height="32">
+
+  <img src="/images/loader.png" class="loader">
 
   <ion-card *ngFor="#campaign of campaigns" (click)="showCampaign(campaign)">
 
