--- a/app/pages/campaigns-list/campaigns-list.html
+++ b/app/pages/campaigns-list/campaigns-list.html
@@ -7,9 +7,9 @@
 </ion-navbar>
 
 
-<ion-content class="campaigns-list" alt="" width="32" height="32">
+<ion-content class="campaigns-list">
 
-  <img src="/images/loader.png" class="loader">
+  <div class="loader"></div>
 
   <ion-card *ngFor="#campaign of campaigns" (click)="showCampaign(campaign)">
 
