Font colors (lighter gray)

--- a/app/pages/product-detail/product-detail.html
+++ b/app/pages/product-detail/product-detail.html
@@ -47,7 +47,7 @@
       </ion-item>
   </ion-list>
 
-    <p>
+    <p class="product-detail-description">
         {{ product.description }}
     </p>
 
