--- a/app/pages/product-detail/product-detail.html
+++ b/app/pages/product-detail/product-detail.html
@@ -34,7 +34,7 @@
 				<li>
 					<ion-icon name="ios-clock-outline"></ion-icon>
 					<span class="text">
-						prodej končí za <strong>{{ product.campaignEndIn.days }} dní {{ product.campaignEndIn.hours }} hodin</strong>
+						Prodej končí za <strong>{{ product.campaignEndIn.days }} dní {{ product.campaignEndIn.hours }} hodin</strong>
 					</span>
 				</li>
 				<li>
@@ -47,7 +47,7 @@
 				</li>
 				<li *ngIf="product.priceInfo.shippingPrice == null" class="stock-success">
 					<ion-icon name="ios-checkmark-circle-outline"></ion-icon>
-					<span class="text">k tomuto produktu máte <strong>dopravu zdarma!</strong></span>
+					<span class="text">K tomuto produktu máte <strong>dopravu zdarma!</strong></span>
 				</li>
             </ul>
 		</ion-item>
