--- a/app/pages/image-detail/image-detail.html
+++ b/app/pages/image-detail/image-detail.html
@@ -2,7 +2,7 @@
 	<ion-title>{{ product.name }}</ion-title>
 </ion-navbar>
 
-<ion-content padding class="image-detail" (click)="closeModal()">
+<ion-content padding class="image-detail" tappable (click)="closeModal()">
 	<ion-slides pager [options]="slideOptions">
 		<ion-slide *ngFor="#image of product.images">
 			<img src="{{image['productDetail-thumbnail-full']}}" />
