--- a/app/app.html
+++ b/app/app.html
@@ -1,13 +1,13 @@
 <ion-menu [content]="content">
 
 	<ion-toolbar>
-		<ion-title>Pages</ion-title>
+		<ion-title>Bonami Menu</ion-title>
 	</ion-toolbar>
 
 	<ion-content>
 		<ion-list>
-			<button menuClose ion-item *ngFor="#p of pages" (click)="openPage(p)">
-				{{p.title}}
+			<button menuClose ion-item (click)="openMainPage()">
+				Main Page
 			</button>
 		</ion-list>
 	</ion-content>
