--- a/app/app.html
+++ b/app/app.html
@@ -9,9 +9,12 @@
 			<button menuClose ion-item (click)="openMainPage()">
 				Main Page
 			</button>
+
+			<button menuClose ion-item (click)="openSettingsPage()">
+				Settings
+			</button>
 		</ion-list>
 	</ion-content>
-
 </ion-menu>
 
 <ion-nav id="nav" [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
