--- a/app/app.html
+++ b/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="content">
+<ion-menu [content]="content" id="menu">
 
 	<ion-toolbar>
 		<ion-title>Bonami Menu</ion-title>
@@ -14,4 +14,4 @@
 
 </ion-menu>
 
-<ion-nav id="nav" [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+<ion-nav id="nav" [root]="rootPage" #content swipeBackEnabled="true"></ion-nav>
