--- a/app/pages/campaigns-list/campaigns-list.html
+++ b/app/pages/campaigns-list/campaigns-list.html
@@ -1,8 +1,7 @@
-
 <ion-navbar *navbar>
-	<!--<button menuToggle>-->
-		<!--<ion-icon name="menu"></ion-icon>-->
-	<!--</button>-->
+	<button menuToggle>
+		<ion-icon name="menu"></ion-icon>
+	</button>
 	<ion-title>
 		<img src="images/bonami-logo.svg" alt="Logo">
 	</ion-title>
