--- a/app/pages/campaign-detail/campaign-detail.html
+++ b/app/pages/campaign-detail/campaign-detail.html
@@ -33,10 +33,10 @@
 					{{ product.stockInfo.stockWarningText }}
 				</p>
 				<p *ngIf="product.priceInfo.retailPrice && product.priceInfo.price != product.priceInfo.retailPrice" class="retailPrice" >
-					{{ product.priceInfo.retailPrice | money }} Kč
+					{{ product.priceInfo.retailPrice | money }} {{ product.priceInfo.retailPriceCurrency}}
 				</p>
 				<button item-right (click)="redirect(product.url)" class="button-medium">
-					{{ product.priceInfo.price | money }} Kč
+					{{ product.priceInfo.price | money }} {{ product.priceInfo.currency}}
 					<ion-icon name="cart"></ion-icon>
 				</button>
 			</ion-item>
