--- a/app/pages/settings/settings.html
+++ b/app/pages/settings/settings.html
@@ -1,5 +1,5 @@
 <ion-navbar *navbar>
-	<ion-title>Settings:</ion-title>
+	<ion-title>Settings</ion-title>
 </ion-navbar>
 
 <ion-content padding class="settings">
@@ -13,4 +13,5 @@
 			</ion-select>
 		</ion-item>
 	</ion-list>
+	<button block secondary (click)="redirect()">Save</button>
 </ion-content>
