--- a/app/app.html
+++ b/app/app.html
@@ -1,17 +1,17 @@
 <ion-menu [content]="content" id="menu">
 
 	<ion-toolbar>
-		<ion-title>Bonami Menu</ion-title>
+		<ion-title>Menu</ion-title>
 	</ion-toolbar>
 
 	<ion-content>
 		<ion-list>
 			<button menuClose ion-item (click)="openMainPage()">
-				Main Page
+				{{ "homepage" | translate}}
 			</button>
 
 			<button menuClose ion-item (click)="openSettingsPage()">
-				Settings
+				{{ "settings" | translate}}
 			</button>
 		</ion-list>
 	</ion-content>
