MEerging with  newsletters and magazine

--- a/app/app.html
+++ b/app/app.html
@@ -10,6 +10,16 @@
 				{{ "homepage" | translate}}
 			</button>
 
+			<button menuClose ion-item (click)="openNewsletterPage()">
+				<!-- {{ "newsletter" | translate}} -->
+				Newsletter
+			</button>
+
+			<button menuClose ion-item (click)="openMagazinePage()">
+				<!-- {{ "magazine" | translate}} -->
+				Magazin
+			</button>
+
 			<button menuClose ion-item (click)="openSettingsPage()">
 				{{ "settings" | translate}}
 			</button>
